--- a/Day 1 - URL Shortener/index.html
+++ b/Day 1 - URL Shortener/index.html
@@ -8,7 +8,7 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <title>URL Shortener</title>
+    <title>Day 1 - URL Shortener</title>
   </head>
   <body>
     <div class="container">
