--- a/Day 2 - Password Generator/index.html
+++ b/Day 2 - Password Generator/index.html
@@ -32,48 +32,29 @@
             value="8"
             class="slider"
             id="sliderRange"
+            step="1"
           />
           <span id="sliderNum"></span>
         </div>
         <div class="colums">
           <div class="col1">
             <div class="checkbox-item">
-              <input
-                type="checkbox"
-                id="psUppercase"
-                name="psUppercase"
-                value="uppercase"
-              />
+              <input type="checkbox" id="psUppercase" name="psUppercase" />
               <label for="psUppercase">Uppercase</label>
             </div>
             <div class="checkbox-item">
-              <input
-                type="checkbox"
-                id="psLowercase"
-                name="psLowercase"
-                value="lowercase"
-              />
+              <input type="checkbox" id="psLowercase" name="psLowercase" />
               <label for="psLowercase">Lowercase</label>
             </div>
           </div>
 
           <div class="col2">
             <div class="checkbox-item">
-              <input
-                type="checkbox"
-                id="psNumbers"
-                name="psNumbers"
-                value="Numbers"
-              />
+              <input type="checkbox" id="psNumbers" name="psNumbers" />
               <label for="psUppercase">Numbers</label>
             </div>
             <div class="checkbox-item">
-              <input
-                type="checkbox"
-                id="psSymbols"
-                name="psSymbols"
-                value="Symbols"
-              />
+              <input type="checkbox" id="psSymbols" name="psSymbols" />
               <label for="psUppercase">Symbols</label>
             </div>
           </div>
